--- a/data/wifi_setup.html
+++ b/data/wifi_setup.html
@@ -4,7 +4,7 @@
   <title>WoW</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="data:,">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.1/css/all.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -20,10 +20,10 @@
             <input type="text" id ="ssid" name="ssid"><br>
             <label for="pass">Password</label>
             <input type="text" id ="pass" name="pass"><br>
-            <label for="ip">IP Address</label>
+            <!--<label for="ip">IP Address</label>
             <input type="text" id ="ip" name="ip" value="192.168.1.200"><br>
             <label for="gateway">Gateway Address</label>
-            <input type="text" id ="gateway" name="gateway" value="192.168.1.1"><br>
+            <input type="text" id ="gateway" name="gateway" value="192.168.1.1"><br>-->
             <input type ="submit" value ="Submit">
           </p>
         </form>
