--- a/data/wifi_setup.html
+++ b/data/wifi_setup.html
@@ -25,6 +25,9 @@
                     
                     <label for="pass">Network Password</label>
                     <input type="password" id="pass" name="pass" placeholder="Enter WiFi password" required>
+
+                    <label for="dev_name">Device name</label>
+                    <input type="text" id="dev_name" name="dev_name" placeholder="Enter device name" required>
                     
                     <input type="submit" value="Connect">
                 </form>
